# OS_lab3

./: .gitignore  CMakeLists.txt
src/: main.cpp  marker_logic.cpp  marker_logic.h  shared.h  threads.cpp
tests/: basic_tests.cpp
